--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ body{
     background-color: rgb(0,0,0); /*Fallback color*/
     background-color: rgba(0,0,0,0.0); /*Black w/opacity/see-through*/
     color: white;
-    font-weight: bold;
     /* border: 3px solid #f1f1f1; */
     position: absolute;
     top: 50%;
@@ -36,7 +35,7 @@ body{
     transform: translate(-50%, -50%);
     z-index: 2;
     height: 100vh;
-    width: 100vw;
+    width: 90%;
     padding: 20px;
     text-align: center;
 }
