--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     z-index: 2;
     height: 100vh;
     width: 90%;
-    padding: 20px;
+    padding: 0;
     text-align: center;
 }
 
@@ -87,8 +87,6 @@ footer {
     padding: 1rem;
     /* background-color: var(--primary); */
     text-align: center;
-    border-top-right-radius: 2rem ;
-    border-top-left-radius: 2rem ;
 }
 
 footer p {
