--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 
 :root {
-    --primary: #eaebf0;
+    --primary: #ffffff;
     --black: #7a7a7a;
     --width-break: 600px;
 }
@@ -11,7 +11,7 @@
 body{
     margin: 0;
     padding: 0;
-    color: var(--black);
+    color: var(--primary);
 }
 
 .background-image {
@@ -36,7 +36,7 @@ body{
     z-index: 2;
     height: 100vh;
     width: 90%;
-    padding: 0;
+    padding-top: 4vh;
     text-align: center;
 }
 
@@ -85,7 +85,6 @@ footer {
     bottom: 0;
     width: 100%;
     padding: 1rem;
-    /* background-color: var(--primary); */
     text-align: center;
 }
 
