--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body{
     z-index: 2;
     height: 100vh;
     width: 90%;
-    /* padding-top: 6vh; */
+    padding-top: 6vh;
     text-align: center;
 }
 
