--- a/style.css
+++ b/style.css
@@ -8,10 +8,21 @@
     --width-break: 600px;
 }
 
+::placeholder {
+    color: rgb(255, 255, 255);
+    opacity: 0.6;
+
+}
+
 body{
     margin: 0;
     padding: 0;
     color: var(--primary);
+}
+
+h1 {
+    padding: 0;
+    margin: 0;
 }
 
 .background-image {
